--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -2,9 +2,13 @@
 <suportclasses:BasePropertyEditor xmlns:fx="http://ns.adobe.com/mxml/2009"
                                   xmlns:s="library://ns.adobe.com/flex/spark"
                                   xmlns:suportclasses="view.suportClasses.*"
-                                  xmlns:domino="view.domino.forms.*" xmlns:forms="view.forms.*">
+                                  xmlns:domino="view.domino.forms.*" 
+								  xmlns:forms="view.forms.*"
+								  xmlns:primeFaces="view.primeFaces.forms.*">
 	<fx:Script>
 		<![CDATA[
+			import mx.collections.ArrayList;
+			
 			protected function textform1_changeHandler(event:Event):void
 			{
 				if (Object(selectedItem).maxLength != "" && Object(selectedItem).maxLength != "0")
@@ -14,6 +18,16 @@
 				else if (txtValue.maxChar != 0)
 					txtValue.maxChar = 0;
 			}
+
+			private function getDominoFieldName(item:Object):String
+			{
+				return item.label;
+			}
+			
+			private function getDominoFieldTooltip(item:Object):String
+			{
+				return item.description;
+			}
 		]]>
 	</fx:Script>
 	<suportclasses:layout>
@@ -21,9 +35,20 @@
     </suportclasses:layout>
 
 	<domino:BasicsForm/>
-    <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
-     <forms:TextForm label="Type" textProperty="type"/>
-	<forms:TextForm label="Kind" textProperty="kind"/>
+	<forms:DropdownListForm id="ddl"
+                            label="Type" textProperty="type"
+                            collectionProperty="types" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>
+  
+    <forms:DropdownListForm id="ddl2"
+                            label="Kind" textProperty="kind"
+                            collectionProperty="kinds" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>
+ 
+    
+
 	<forms:TextForm id="txtValue" 
 					label="Value" textProperty="text"/>
 	<forms:TextForm label="Maximum Length" textProperty="maxLength"
