--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -47,6 +47,7 @@
 			
 			import view.domino.surfaceComponents.components.DominoInputText;
 			import view.domino.surfaceComponents.components.DominoLabel;
+			import view.domino.surfaceComponents.components.DominoTable;
 			
 			public var visualEditorType:String;
 			
@@ -62,6 +63,7 @@
 					collection = new ArrayCollection([
 						new ComponentListItem("Input", DominoInputText),
 						new ComponentListItem("Label", DominoLabel),
+						new ComponentListItem("Table", DominoTable)
 					]);
 				} else if (VisualEditorType.FLEX == visualEditorType)
 				{
