--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -30,12 +30,12 @@
 			<view:ComponentsOrganizer id="componentsOrganizer"
 									  width="100%" top="0" bottom="20"
 									  editingSurface="{editingSurface}"
-									  visible="{visualEditorType != 'flex' &amp;&amp; bbPropertyPanel.selectedIndex==1}"
-									  includeInLayout="{visualEditorType != 'flex'}"/>
+									  visible="{visualEditorType != 'flex' &amp;&amp; bbPropertyPanel.selectedIndex==1 &amp;&amp; visualEditorType != 'domino'}"
+									  includeInLayout="{visualEditorType != 'flex' &amp;&amp; visualEditorType != 'domino'}"/>
 			<s:ButtonBar id="bbPropertyPanel" 
 						 bottom="0" right="0" selectedIndex="0"
 						 skinClass="skins.VisualEditorButtonBarSkin" requireSelection="true"
-						 includeInLayout="{visualEditorType != 'flex'}" visible="{visualEditorType != 'flex'}">
+						 includeInLayout="{visualEditorType != 'flex' &amp;&amp; visualEditorType != 'domino'}" visible="{visualEditorType != 'flex' &amp;&amp; visualEditorType != 'domino'}">
 				<s:ArrayList>
 					<fx:Object icon="@Embed('/assets/list.png')" label="" toolTip="Properties"/>
 					<fx:Object icon="@Embed('/assets/organize.png')" label="" toolTip="Organize"/>
